add categories & register pages

--- a/project/src/index.css
+++ b/project/src/index.css
@@ -7,3 +7,11 @@ body {
   box-sizing: border-box;
 }
 
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+}
+
+P {
+  font-family: 'Montserrat', sans-serif;
+}
