--- a/project/src/styles/css/main.css
+++ b/project/src/styles/css/main.css
@@ -1,12 +1,84 @@
+.container-fluid {
+    width: 100%;
+
+}
+
+.container-fluid .banner {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.container-fluid .banner .banner-content h5,
+p {
+    text-align: center;
+}
+
+.container-fluid .banner .banner-image {
+    max-width: 500px;
+    height: 400px;
+}
+
+.container-fluid .banner .banner-image img {
+    max-width: 100%;
+    height: 100%;
+}
+
+/*-------------*/
+/*    login     */
+/*-------------*/
+
+.login {
+    max-width: 700px;
+    height: 100%;
+    margin: 75px auto;
+    border: 1px solid #eee;
+    border-radius: 10px;
+    -webkit-box-shadow: 3px 7px 5px 0px rgba(176, 176, 176, 1);
+    -moz-box-shadow: 3px 7px 5px 0px rgba(176, 176, 176, 1);
+    box-shadow: 3px 7px 5px 0px rgba(176, 176, 176, 1);
+}
+
+.login-form {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    margin: 0 auto;
+}
+
+.login-form form {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-form form input {
+    width: 100%;
+    margin: 10px 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 13px;
+}
+
+.login-form form .btn {
+    color: rgb(253, 253, 253);
+    width: 150px;
+}
+
+
 @media only screen and (max-width: 500px) {
     /*-------------*/
     /*    main     */
     /*-------------*/
 
-    .container-fluid {
+    .main-container{
         width: 100%;
         height: 500px;
-        background-image: url('../images/header_wrapper.png');
+        background-image: url('../images/header_wrapper_mobile.png');
         background-size: 500px;
         background-repeat: no-repeat;
         padding: 0;
@@ -37,10 +109,20 @@
         text-align: center;
     }
 
+    .banner .banner-image {
+        display: none;
+    }
+
+    /*-------------*/
+    /*    login     */
+    /*-------------*/
+
     .login {
         height: 100%;
         margin: 0;
         margin-top: 100px;
+        border: none;
+        box-shadow: none;
     }
 
     .login-form {
@@ -61,95 +143,7 @@
     .login-form form input {
         max-width: 300px;
         margin: 10px 5px;
-        font-family: 'Montserrat', sans-serif;
-        font-size: 13px;
     }
 
-    .login-form form .btn {
-        color: rgb(253, 253, 253);
-        width: 150px;
-    }
-
-    /*-------------*/
-    /*    main     */
-    /*-------------*/
-
-    .categories ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-
-    .categories ul li {
-        color: white;
-        width: 200px;
-        height: 200px;
-        margin: 10px;
-        background-color: teal;
-        border-radius: 10px;
-        text-align: center;
-        padding-top: 80px;
-        cursor: pointer;
-    }
-
-    .categories ul li:nth-child(1) {
-        background-color: #E92D2D;
-    }
-
-    .categories ul li:nth-child(2) {
-        background-color: #569BE5;
-    }
-
-    .categories ul li:nth-child(3) {
-        background-color: #EFE818;
-    }
-
-    .categories ul li:nth-child(4) {
-        background-color: #86C793;
-    }
-
-    .categories ul li:nth-child(5) {
-        background-color: #C49E33;
-    }
-
-    .categories ul li:nth-child(6) {
-        background-color: #8C939A;
-    }
-
-    /*----------------*/
-    /* mobile Navbar  */
-    /*----------------*/
-
-    .mobile-navbar {
-        background-color: #314f6f;
-        width: 100%;
-        height: 75px;
-        position: fixed;
-        bottom: 0;
-        -webkit-box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
-        -moz-box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
-        box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
-    }
-
-    .mobile-navbar ul {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-
-    .mobile-navbar ul li {
-        color: white;
-        font-family: 'Montserrat', sans-serif;
-    }
 
 }
