add lecture-list and lecture page

--- a/project/src/styles/css/main.css
+++ b/project/src/styles/css/main.css
@@ -77,7 +77,7 @@ p {
 
     .main-container{
         width: 100%;
-        height: 500px;
+        height: auto;
         background-image: url('../images/header_wrapper_mobile.png');
         background-size: 500px;
         background-repeat: no-repeat;
@@ -147,3 +147,74 @@ p {
 
 
 }
+
+    /*--------------------*/
+    /*    lecture list     */
+    /*---------------------*/
+
+    .lecture_list {
+        width: 100%;
+        height: auto;
+    }
+
+    .lecture_list ul {
+        max-width: 800px;
+        height: auto;
+        margin: 0;
+        padding: 10px;
+        list-style: none;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .lecture_list ul li{
+        background-color: #569BE5;
+        width: 100%;
+        height: 100px;
+        margin: 10px;
+        text-align: center;
+        padding-top: 35px;
+        font-size: 25px;
+        font-family: 'Montserrat', sans-serif;
+        color: white;
+        font-weight: 800;
+        cursor: pointer;
+    }
+
+    @media only screen and (max-width: 500px) {
+        .lecture_list ul {
+            max-width: 800px;
+            height: auto;
+            margin: 0;
+            padding: 100px 10px;
+            list-style: none;
+            margin: 0 auto;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+        }
+    }
+
+    
+    /*--------------------*/
+    /*    lecture        */
+    /*---------------------*/
+
+    .public-container .lecture {
+       width: 100%;
+       height: auto;
+       padding-bottom: 100px;
+    }
+    .public-container .lecture .theory{
+        margin: 0;
+     }
+
+     .public-container .lecture .theory .content{
+        padding: 0;
+     }
