--- a/project/src/styles/css/home.css
+++ b/project/src/styles/css/home.css
@@ -72,7 +72,7 @@
     }
     .public-container {
         width: 100%;
-        height: 500px;
+        height: auto;
         background-image: url('../images/header_wrapper_full.png');
         background-size: 100% 300px;
         background-repeat: no-repeat;
@@ -86,7 +86,7 @@
 @media only screen and (max-width: 500px) {
     .public-container {
         width: 100%;
-        height: 500px;
+        height: auto;
         background-image: url('../images/header_wrapper_mobile.png');
         background-size: 100% 300px;
         background-repeat: no-repeat;
@@ -108,6 +108,10 @@
     .mobile-navbar ul li {
         color: white;
         font-family: 'Montserrat', sans-serif;
+    }
+
+    .public-container .instructions {
+        padding-bottom: 100px;
     }
 
 }
