--- a/src/styles/css/home.css
+++ b/src/styles/css/home.css
@@ -1,98 +1,83 @@
 /*-------------*/
 /*    home     */
 /*-------------*/
-    .categories ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
+.categories ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    list-style: none;
+    padding: 0;
+    row-gap: 10px;
+    column-gap: 10px;
+    margin: 0 10px;
+}
 
-    .categories ul li {
-        color: white;
-        width: 150px;
-        height: 150px;
-        margin: 10px;
-        background-color: teal;
-        border-radius: 10px;
-        text-align: center;
-        padding-top: 60px;
-        cursor: pointer;
-    }
+.categories ul li {
+    padding: 40px 0;
+    text-align: center;
+    color: #ffffff;
+    cursor: pointer;
+    border-radius: 3px;
+    transition: transform 0.3s ease-in-out;
+}
 
+.categories ul li a {
+    color: inherit;
+}
 
-    .categories ul li:nth-child(1) {
-        background-color: #E92D2D;
-    }
+.categories ul li:hover {
+    transform: scale(1.05);
+}
 
-    .categories ul li:nth-child(2) {
-        background-color: #569BE5;
-    }
+.categories ul li h4 {
+    margin: 0;
+}
 
-    .categories ul li:nth-child(3) {
-        background-color: #EFE818;
-    }
+/*----------------*/
+/* mobile Navbar  */
+/*----------------*/
+.mobile-navbar {
+    background-color: #314f6f;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
+    display: flex;
+    justify-content: space-between;
+}
 
-    .categories ul li:nth-child(4) {
-        background-color: #86C793;
-    }
+.mobile-navbar a {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+}
 
-    .categories ul li:nth-child(5) {
-        background-color: #C49E33;
-    }
+.mobile-navbar a.active {
+    background: #1a3c61;
+}
 
-    .categories ul li:nth-child(6) {
-        background-color: #8C939A;
-    }
+.mobile-navbar a i {
+    margin: 0 auto;
+}
 
-    @media only screen and (min-width:500px) {
-        @keyframes background-color {
-            0% {
-                transform: scale(1,1);
-            }
-            50% {
-                transform: scale(1.4,1.4);
-            }
-            100% {
-                transform: scale(1.2,1.2);
-            }
-          }
-    
-        .categories ul li:hover {
-            animation: background-color 2s ease-in-out;
-            animation-iteration-count: unset;
-        }
-    }
-    /*----------------*/
-    /* mobile Navbar  */
-    /*----------------*/
-
-    .mobile-navbar {
-        background-color: #314f6f;
-        width: 100%;
-        height: 75px;
-        position: fixed;
-        bottom: 0;
-        -webkit-box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
-        -moz-box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
-        box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
-    }
+.mobile-navbar a:hover {
+    background: #1a3c61;
+    text-decoration: none;
+}
 
 @media only screen and (min-width: 500px) {
     .categories {
         width: 100%;
         margin-top: 200px;
     }
-    .mobile-navbar  {
+    .mobile-navbar {
         display: none;
     }
     .public-container {
         width: 100%;
         height: auto;
-        background-image: url('../images/header_wrapper_full.png');
+        background-image: url("../images/header_wrapper_full.png");
         background-size: 100% 300px;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -100,16 +85,13 @@
     }
 }
 
-
-
 @media only screen and (max-width: 500px) {
     .public-container {
         width: 100%;
         height: auto;
-        background-image: url('../images/header_wrapper_mobile.png');
+        background-image: url("../images/header_wrapper_mobile.png");
         background-size: 100% 300px;
         background-repeat: no-repeat;
-        background-attachment: fixed;
         padding: 0;
     }
     .mobile-navbar ul {
@@ -126,12 +108,10 @@
 
     .mobile-navbar ul li {
         color: white;
-        font-family: 'Montserrat', sans-serif;
+        font-family: "Montserrat", sans-serif;
     }
 
     .public-container .instructions {
         padding-bottom: 100px;
     }
-
 }
-
