--- a/src/styles/css/home.css
+++ b/src/styles/css/home.css
@@ -1,3 +1,6 @@
+.mb-navbar {
+    margin-bottom: 50px;
+}
 /*-------------*/
 /*    home     */
 /*-------------*/
@@ -32,16 +35,34 @@
     margin: 0;
 }
 
+/*-----------------.*/
+/* top/bottom bars  */
+/*------------------*/
+.mobile-navbar,
+.topbar {
+    background-color: #314f6f;
+    width: 100%;
+    height: 50px;
+    box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
+}
+
+.topbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.topbar i {
+    color: #ffffff;
+}
+
 /*----------------*/
 /* mobile Navbar  */
 /*----------------*/
 .mobile-navbar {
-    background-color: #314f6f;
-    width: 100%;
-    height: 50px;
     position: fixed;
     bottom: 0;
-    box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
+    left: 0;
     display: flex;
     justify-content: space-between;
 }
