--- a/src/styles/css/home.css
+++ b/src/styles/css/home.css
@@ -1,145 +1,91 @@
 .mb-navbar {
-    margin-bottom: 50px;
-}
-/*-------------*/
-/*    home     */
-/*-------------*/
-.categories ul {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    list-style: none;
-    padding: 0;
-    row-gap: 10px;
-    column-gap: 10px;
-    margin: 0 10px;
-}
-
-.categories ul li {
-    padding: 40px 0;
-    text-align: center;
-    color: #ffffff;
-    cursor: pointer;
-    border-radius: 3px;
-    transition: transform 0.3s ease-in-out;
-}
-
-.categories ul li a {
-    color: inherit;
-}
-
-.categories ul li:hover {
-    transform: scale(1.05);
-}
-
-.categories ul li h4 {
-    margin: 0;
-}
-
-/*-----------------.*/
-/* top/bottom bars  */
-/*------------------*/
-.mobile-navbar,
-.topbar {
-    background-color: #314f6f;
-    width: 100%;
-    height: 50px;
-    box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
-}
-
-.topbar {
-    display: flex;
-    align-items: center;
-}
-
-.topbar .back-button {
-    left: 0;
-    color: #ffffff;
-}
-
-.topbar .info-button {
-    right: 0;
-    background: inherit;
-    border: 0;
-    color: #ffffff;
+  margin-bottom: 60px;
 }
 
 /*----------------*/
 /* mobile Navbar  */
 /*----------------*/
 .mobile-navbar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
+  background-color: #314f6f;
+  width: 100%;
+  height: 50px;
+  box-shadow: -2px -7px 5px 0px rgba(219, 219, 219, 1);
+}
+
+.mobile-navbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .mobile-navbar a {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    color: #ffffff;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
 }
 
 .mobile-navbar a.active {
-    background: #1a3c61;
+  background: #1a3c61;
 }
 
 .mobile-navbar a i {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .mobile-navbar a:hover {
-    background: #1a3c61;
-    text-decoration: none;
+  background: #1a3c61;
+  text-decoration: none;
 }
 
 @media only screen and (min-width: 500px) {
-    .categories {
-        width: 100%;
-        margin-top: 200px;
-    }
-    .mobile-navbar {
-        display: none;
-    }
-    .public-container {
-        width: 100%;
-        height: auto;
-        background-image: url("../images/header_wrapper_full.png");
-        background-size: 100% 300px;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        padding: 0;
-    }
+  .categories {
+    width: 100%;
+    margin-top: 200px;
+  }
+  .mobile-navbar {
+    display: none;
+  }
+  .public-container {
+    width: 100%;
+    height: auto;
+    background-image: url('../images/header_wrapper_full.png');
+    background-size: 100% 300px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    padding: 0;
+  }
 }
 
 @media only screen and (max-width: 500px) {
-    .public-container {
-        width: 100%;
-        height: auto;
-        background-image: url("../images/header_wrapper_mobile.png");
-        background-size: 100% 300px;
-        background-repeat: no-repeat;
-        padding: 0;
-    }
-    .mobile-navbar ul {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-    }
+  .public-container {
+    width: 100%;
+    height: auto;
+    background-image: url('../images/header_wrapper_mobile.png');
+    background-size: 100% 300px;
+    background-repeat: no-repeat;
+    padding: 0;
+  }
+  .mobile-navbar ul {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
-    .mobile-navbar ul li {
-        color: white;
-        font-family: "Montserrat", sans-serif;
-    }
+  .mobile-navbar ul li {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+  }
 
-    .public-container .instructions {
-        padding-bottom: 100px;
-    }
+  .public-container .instructions {
+    padding-bottom: 60px;
+  }
 }
