--- a/src/styles/css/admin.css
+++ b/src/styles/css/admin.css
@@ -1,27 +1,101 @@
-.container header {
-    width: 100%;
-    height: 30vh;
-    /* background: rgb(49, 79, 111);
-    background: linear-gradient(90deg, rgba(49, 79, 111, 1) 0%, rgba(98, 114, 131, 1) 100%, rgba(92, 158, 228, 1) 100%); */
+.admin {
+    padding: 0;
 }
 
-.container header ul {
+.admin .adminHeader {
+    width: 100%;
+    height: auto;
+    margin-bottom: 25px;
+    background-color: #eee;
+}
+
+.admin .adminHeader nav {
+    background-color: cadetblue;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+
+.admin .adminHeader nav h6 {
+    color: white;
+}
+
+.admin .adminHeader nav ul {
+    width: 250px;
+    list-style: none;
+    margin: 0;
+    overflow: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+
+.admin .adminHeader nav ul li {
+    color: white;
+    text-transform: capitalize;
+}
+
+.admin .adminHeader nav ul li:last-child {
+    color: rgb(51, 51, 51);
+    cursor: pointer;
+}
+
+@keyframes rotate-90-cw {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+.admin .adminHeader nav ul li:last-child:hover {
+    -webkit-animation: rotate-90-cw 1.5s ease-in-out infinite;
+    animation: rotate-90-cw 1.5s ease-in-out infinite;
+}
+
+.admin .adminHeader .edit {
+    width: 100%;
+    height: 100%;
+}
+
+.admin .adminHeader .edit ul {
+    list-style: none;
     margin: 0;
     padding: 0;
-    list-style: none;
-    padding-left: 10px;
-    color: rgb(255, 255, 255);
-    text-transform: capitalize;
-    background-color: #4d6279;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
 }
 
-@media only screen and (max-width: 500px) {
-    .table thead th {
-        font-size: 13px;
-        max-width: 100px;
-    }
-    .table tbody tr td {
-        font-size: 12px;
-        max-width: 100px;
-    }
+.admin .adminHeader .edit ul li {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    margin: 5px;
+    color: rgb(34, 34, 34);
+    cursor: pointer;
+    -webkit-box-shadow: 0px 6px 5px -4px rgba(173,173,173,1);
+    -moz-box-shadow: 0px 6px 5px -4px rgba(173,173,173,1);
+    box-shadow: 0px 6px 5px -4px rgba(173,173,173,1);
+}
+
+.admin .adminHeader .edit ul li button {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+
+.hide {
+    display: none;
 }
