--- a/src/styles/css/admin.css
+++ b/src/styles/css/admin.css
@@ -5,6 +5,7 @@
 .admin .adminHeader {
     width: 100%;
     height: auto;
+    margin-bottom: 25px;
     background-color: #eee;
 }
 
@@ -83,9 +84,9 @@
     margin: 5px;
     color: rgb(34, 34, 34);
     cursor: pointer;
-    -webkit-box-shadow: 0px 6px 5px -4px rgba(173, 173, 173, 1);
-    -moz-box-shadow: 0px 6px 5px -4px rgba(173, 173, 173, 1);
-    box-shadow: 0px 6px 5px -4px rgba(173, 173, 173, 1);
+    -webkit-box-shadow: 0px 6px 5px -4px rgba(173,173,173,1);
+    -moz-box-shadow: 0px 6px 5px -4px rgba(173,173,173,1);
+    box-shadow: 0px 6px 5px -4px rgba(173,173,173,1);
 }
 
 .admin .adminHeader .edit ul li button {
@@ -93,6 +94,7 @@
     height: 100%;
     border: none;
 }
+
 
 .hide {
     display: none;
