Fix/lecture modal (#41)
* added lecture-modal, updated user-modal

* added links edit

* added links + quizzes update / answer creation

* css fixes

* added teacherCheck

--- a/src/styles/css/home.css
+++ b/src/styles/css/home.css
@@ -91,6 +91,9 @@
 .rdt_ExpanderRow {
   background-color: #d1d8e4 !important;
 }
+.rdt_TableHeadRow {
+  min-height: 36px !important;
+}
 
 button + button {
   margin-left: 2px;
