--- a/src/styles/css/categories.css
+++ b/src/styles/css/categories.css
@@ -3,6 +3,8 @@
   grid-template-columns: repeat(2, 1fr);
   row-gap: 10px;
   column-gap: 10px;
+  max-width: 1300px;
+  margin: 0 auto;
 }
 
 .categories-item {
